--- a/HTML&CSS/IntroductionLab/01.HTML/05.Tag-Cardio-Semantic-HTML-Header/semantic-header.html
+++ b/HTML&CSS/IntroductionLab/01.HTML/05.Tag-Cardio-Semantic-HTML-Header/semantic-header.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>05.Tag Cardio: Semantic HTML Header</title>
 </head>
+
 <body>
     <header>
         <h1>Epcot Center</h1>
-        <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+        <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions,
+            award-winning fireworks and seasonal special events.</p>
     </header>
 </body>
+
 </html>
