--- a/HTML&CSS/05.Box-Model&Position-Lab-Resources/05_Property-Margin-Inline/margin-inline.html
+++ b/HTML&CSS/05.Box-Model&Position-Lab-Resources/05_Property-Margin-Inline/margin-inline.html
@@ -10,7 +10,8 @@
 
 <body>
     <div>
-        <p>Far out in the uncharted backwaters of the unfashionable end of the western spiral arm of the Galaxy lies a small unregarded yellow sun.</p>
+        <p>Far out in the uncharted backwaters of the unfashionable end of the western spiral arm of the Galaxy lies a
+            small unregarded yellow sun.</p>
     </div>
 </body>
 
