Quick fixed the formatting

--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/12_Navigation-float/index.html
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/12_Navigation-float/index.html
@@ -69,18 +69,23 @@
                         porttitor rhoncus sed nec neque. Praesent metus quam, sagittis eu mauris a, pellentesque
                         suscipit
                         justo. In varius tortor a ante feugiat, quis finibus magna blandit.</p>
-                <section class="p-left-align">
-                    <p > 
-                        Phasellus dictum interdum efficitur. Maecenas eleifend sapien felis, quis interdum ex tempor a.
-                        Aenean sodales, eros ac fermentum elementum, enim nisi finibus nisi, sed tempus turpis mauris ac
-                        quam. Aenean ac leo vel ante sollicitudin consequat in ut augue. Vestibulum ante ipsum primis in
-                        faucibus orci luctus et ultrices posuere cubilia Curae; Duis sodales odio diam. Phasellus
-                        ultricies
-                        faucibus massa sit amet pharetra.
-                            </p>
-                            <blockquote>
-                            <p>Proin sit amet est vitae mi porttitor rhoncus sed nec neque. Praesent metus quam, sagittis eu
-                                mauris a, pellentesque suscipit justo. In varius tortor a ante feugiat, quis finibus magna
+                    <section class="p-left-align">
+                        <p>
+                            Phasellus dictum interdum efficitur. Maecenas eleifend sapien felis, quis interdum ex tempor
+                            a.
+                            Aenean sodales, eros ac fermentum elementum, enim nisi finibus nisi, sed tempus turpis
+                            mauris ac
+                            quam. Aenean ac leo vel ante sollicitudin consequat in ut augue. Vestibulum ante ipsum
+                            primis in
+                            faucibus orci luctus et ultrices posuere cubilia Curae; Duis sodales odio diam. Phasellus
+                            ultricies
+                            faucibus massa sit amet pharetra.
+                        </p>
+                        <blockquote>
+                            <p>Proin sit amet est vitae mi porttitor rhoncus sed nec neque. Praesent metus quam,
+                                sagittis eu
+                                mauris a, pellentesque suscipit justo. In varius tortor a ante feugiat, quis finibus
+                                magna
                                 blandit. </p>
                             <p class="author">Author Name</p>
                         </blockquote>
@@ -98,7 +103,7 @@
                         justo. In varius tortor a ante feugiat, quis finibus magna blandit.</p>
 
                     <h2>Heading level 2</h2>
-                  
+
                     <p>
                         <img class="align-left" src="images/first-image.jpg" alt="">
                         Ut vitae tristique magna. In hac habitasse platea dictumst. Aliquam tempor dolor in ante porta,
@@ -107,7 +112,8 @@
                         hendrerit.
                         Nulla eleifend vel diam non viverra. Nullam at maximus mi. Integer luctus quis felis vitae
                         ornare.
-                        Ut eu consequat libero.</p>
+                        Ut eu consequat libero.
+                    </p>
                     <p>Maecenas eleifend sapien felis, quis interdum ex tempor a. Aenean sodales, eros ac fermentum
                         elementum, enim nisi finibus nisi, sed tempus turpis mauris ac quam. Aenean ac leo vel ante
                         sollicitudin consequat in ut augue. Vestibulum ante ipsum primis in faucibus orci luctus et
