--- a/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/09_Blog-layout-inline-block/index.html
+++ b/HTML&CSS/06.Box-Model-and-Position-Exercise-Resources/09_Blog-layout-inline-block/index.html
@@ -10,28 +10,28 @@
 
 <body>
     <div class="site">
-            <header class="site-header">
-                <h1 class="site-title">
-                    Article Title
-                </h1>
-                <p class="site-header-paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempus lorem nibh, quis
-                    vehicula quam eleifend vel. Sed sagittis urna a commodo fermentum. Donec fringilla volutpat mi, non
-                    ultrices dolor ultrices quis. Quisque vel lectus vel dui fermentum ornare. Mauris at suscipit orci.
-                    Sed convallis eget nisl ac fermentum. Ut tincidunt dui velit, ut malesuada nulla lobortis at. Morbi
-                    in gravida nulla. Donec ut massa imperdiet, pulvinar nisi quis, auctor dolor. Curabitur sed
-                    facilisis nibh, a tincidunt lectus. Duis interdum nibh quis porttitor facilisis. In sit amet nulla
-                    sed nibh tristique iaculis eu nec metus.</p>
-                <aside class="site-aside">
-                    <h3>Latest Posts</h3>
-                    <ul>
-                        <li><a href="#">Aliquam erat volutpat</a></li>
-                        <li><a href="#">Donec sodales malesuada purus, a gravida ipsum molestie ac</a></li>
-                        <li><a href="#">Donec ac luctus leo, eget lobortis sapien</a></li>
-                    </ul>
-                </aside>
-            </header>
-        
+        <header class="site-header">
+            <h1 class="site-title">
+                Article Title
+            </h1>
+            <p class="site-header-paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tempus lorem nibh, quis
+                vehicula quam eleifend vel. Sed sagittis urna a commodo fermentum. Donec fringilla volutpat mi, non
+                ultrices dolor ultrices quis. Quisque vel lectus vel dui fermentum ornare. Mauris at suscipit orci.
+                Sed convallis eget nisl ac fermentum. Ut tincidunt dui velit, ut malesuada nulla lobortis at. Morbi
+                in gravida nulla. Donec ut massa imperdiet, pulvinar nisi quis, auctor dolor. Curabitur sed
+                facilisis nibh, a tincidunt lectus. Duis interdum nibh quis porttitor facilisis. In sit amet nulla
+                sed nibh tristique iaculis eu nec metus.</p>
+            <aside class="site-aside">
+                <h3>Latest Posts</h3>
+                <ul>
+                    <li><a href="#">Aliquam erat volutpat</a></li>
+                    <li><a href="#">Donec sodales malesuada purus, a gravida ipsum molestie ac</a></li>
+                    <li><a href="#">Donec ac luctus leo, eget lobortis sapien</a></li>
+                </ul>
+            </aside>
+        </header>
+
         <section class="site-section">
             <h2>Heading level 2</h2>
             <p>Aliquam hendrerit egestas orci, at sollicitudin lectus mattis eu. Nunc elementum congue sagittis.
@@ -60,7 +60,10 @@
                 pharetra.
             </p>
             <img src="images/picture.jpg" alt="picture">
-            <p>Ut vitae tristique magna. In hac habitasse platea dictumst. Aliquam tempor dolor in ante porta, quis convallis metus laoreet. Ut a magna mauris. Vestibulum blandit ante vitae felis gravida hendrerit. Nulla eleifend vel diam non viverra. Nullam at maximus mi. Integer luctus quis felis vitae ornare. Ut eu consequat libero.
+            <p>Ut vitae tristique magna. In hac habitasse platea dictumst. Aliquam tempor dolor in ante porta, quis
+                convallis metus laoreet. Ut a magna mauris. Vestibulum blandit ante vitae felis gravida hendrerit. Nulla
+                eleifend vel diam non viverra. Nullam at maximus mi. Integer luctus quis felis vitae ornare. Ut eu
+                consequat libero.
             </p>
         </section>
         <footer class="site-footer">
